chore(cli): silence JVM startup noise + clean `serve` config error
- Add the `slf4j-nop` binding so SLF4J stops printing "No providers
  found / defaulting to NOP" on every CLI invocation (we log via ZIO,
  not SLF4J; the NOP binding discards transitive library logs).
- Add `--enable-native-access=ALL-UNNAMED` to the launcher to silence
  netty's restricted-method warnings on JDK 24+.
- `ccas serve` validates CCAS_CONTACT_EMAIL / DB env up front and prints
  a one-line message instead of a raw ConfigException stack when a
  mandatory var is missing (the staged binary reads env only, no .env).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>